methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  var biscuit=0
  var x=rien
  while (biscuit==0){
    forward()
    x=getCouleurSol():Color
    backward()
    if (x==Color.green){
      forward()
      baisseBrosse()
      leveBrosse()
      if (estSurBiscuit()){
        prendBiscuit()
        biscuit = biscuit + 1
      }
    }
    else {
      left()
      forward()
    	x=getCouleurSol():Color
    	backward()
    	if (x==Color.green){
      	forward()
        baisseBrosse()
        leveBrosse()
        if (estSurBiscuit()){
        	prendBiscuit()
        	biscuit = biscuit + 1
        }
      else {
        right()
      }
    }
    }
  return true    
  }
}